@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+    <object name="eea_tinymce_plugins" remove="True" />
+</object>
+
