@@ -4,6 +4,19 @@
         i18n_domain="eea">
 
     <genericsetup:upgradeSteps
+            source="9.3"
+            destination="9.4"
+            profile="eea.design:default">
+
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 9.4"
+                description="Remove eea_tinymce_plugins skins"
+                import_profile="eea.design:upgrade94"
+                />
+
+    </genericsetup:upgradeSteps>
+
+    <genericsetup:upgradeSteps
             source="9.2"
             destination="9.3"
             profile="eea.design:default">
