@@ -3,6 +3,8 @@ Changelog
 
 9.5-dev - (unreleased)
 ----------------------
+* Change: Removed tinymce plugins from this package through an upgrade step
+  [olimpiurob refs #18641]
 * Change: eea fullscreen plugin no longer uses the bundled fullscreen plugin
   which has many issues given the fact that it inserts a new editor when using
   it
